Clean pom and Update README (#963)
- Clean spark-2.3 profile from pom.xml

- Update travis.yml build script

- Update README.md

- Java8 nerver use '-XX:PermSize' and '-XX:MaxPermSize'

- Spark-2.3.2 use com.fasterxml.jackson.module:jackson-module-scala_2.11:2.6.7.1